--- a/index.html
+++ b/index.html
@@ -5,55 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Mountains</title>
 </head>
 <body>
     <div class="main">
     <div class="header pad">
-        <div class="logo">Logo</div>
+        <div class="logo"><span class="m">M</span>ountains</div>
         <div class="nav">
             <ul class="navli text">
-                <li><a href="#">Link1</a></li>
-                <li><a href="#">Link2</a></li>
-                <li><a href="#">Link3</a></li>
+                <li><a href="#">Mountains</a></li>
+                <li><a href="#">Volcanoes</a></li>
+                <li><a href="#">Wiki</a></li>
             </ul>
         </div>
     </div> <!--header-->
     <div class="hero pad">
         <div class="hero-content">
-            <h1>This Web is Awesome</h1>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa magnam ipsa cumque minus sed qui sunt.</p>
+            <h1>Mountains are huge</h1>
+            <p class="text"> mountain is an elevated portion of the Earth's crust.</p>
             <button class="button">Sign Up</button>
         </div>
-        <div class="hero-img"><img src="./img/hero.jp" alt=""></div>
+        <div class="hero-img"><img src="https://cdn.pixabay.com/photo/2022/04/26/01/09/tibet-7157189__340.jpg" alt=""></div>
     </div> <!--.hero-->
     <main>
-        <h2>Here a Beautiful Text</h2>
+        <h2>Four Mountains</h2>
 
         <div class="main-div pad">
             <div class="content">
-                <img class="img" src="./img/m1.avi" alt="content-image">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <img class="img" src="https://cdn.pixabay.com/photo/2013/10/02/23/03/mountains-190055__340.jpg" alt="content-image">
+                <p>This is the mountain number 1</p>
             </div>
             <div class="content">
-                <img class="img" src="./img/m2.avi" alt="content-image">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <img class="img" src="https://cdn.pixabay.com/photo/2012/08/27/14/19/mountains-55067__340.png" alt="content-image">
+                <p>This is the mountain number 2</p>
             </div>
             <div class="content">
-                <img class="img" src="./img/m3.avi" alt="content-image">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <img class="img" src="https://cdn.pixabay.com/photo/2014/10/07/13/48/mountain-477832__340.jpg" alt="content-image">
+                <p>This is the mountain number 3</p>
             </div>
             <div class="content">
-                <img class="img" src="./img/m4.avi" alt="content-image">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <img class="img" src="https://cdn.pixabay.com/photo/2015/04/23/22/01/mountains-736886__340.jpg" alt="content-image">
+                <p>This is the mountain number 4</p>
             </div>
         </div> <!--.main-div-->
         <div class="quote pad">
-            <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam placeat vitae corrupti ipsa explicabo nam tempora possimus velit aspernatur maxime eum sunt, ut pariatur accusantium, autem voluptate assumenda, minima adipisci.</em></p>
-            <p>W.k. Junior</p>
+            <p><em>The highest known permanently tolerable altitude is at 5,950 metres (19,520 ft).[34] At very high altitudes, the decreasing atmospheric pressure means that less oxygen is available for breathing.</em></p>
+            <p class="aquote">W.k. Junior</p>
         </div> <!--.phrase-->
         <div class="final pad">
             <div class="final-content">
