--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="hero pad">
         <div class="hero-content">
             <h1>Mountains are huge</h1>
-            <p class="text"> mountain is an elevated portion of the Earth's crust.</p>
+            <p class="text"> mountains are an elevated portion of the Earth's crust.</p>
             <button class="button">Sign Up</button>
         </div>
         <div class="hero-img"><img src="https://cdn.pixabay.com/photo/2022/04/26/01/09/tibet-7157189__340.jpg" alt=""></div>
@@ -53,18 +53,21 @@
         </div> <!--.main-div-->
         <div class="quote pad">
             <p><em>The highest known permanently tolerable altitude is at 5,950 metres (19,520 ft).[34] At very high altitudes, the decreasing atmospheric pressure means that less oxygen is available for breathing.</em></p>
-            <p class="aquote">W.k. Junior</p>
+            <p class="aquote">- Mr. Mountains Jr.</p>
         </div> <!--.phrase-->
         <div class="final pad">
             <div class="final-content">
-                <h3>Here a text</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam placeat vitae corrupti</p>
-                <button class="button">Sign Up</button>
+                <div class="final1">
+                    <h3 class="h3">Do you want to try a mountain?</h3>
+                <p class="finalp">We have +400 mountains available on this page.</p>
+                </div>
+                <div class="final2">                <button class="button b2">Sign Up</button>
+                </div>
             </div>
         </div> <!--.final-->
     </main>
     <footer class="footer pad">
-        <p>CopyRigths Here</p>
+        <p>Copyright Mountain Travels 2022</p>
     </footer>
 </div>
 </body>
